--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 <h2>REALISTIC BEAUTY OF NATURE</h2>
 
 <div class="polaroid">
-  <img src="image\image6.jpg" alt="nature" style="width:100%">
+  <img src="image6.jpg" alt="nature" style="width:100%">
   <div class="container">
     <p><strong><em>FLOWER</em></strong></p>
     </div>
 </div>
 
 <div class="polaroid">
-  <img src="image\image4.jpg" alt="Dew DROPS" style="width:100%">
+  <img src="image4.jpg" alt="Dew DROPS" style="width:100%">
   <div class="container">
   <p><strong><em>DEW DROPS</em></strong></p>
   </div>
 </div>
 
 <div class="polaroid">
-    <img src="image\image8.jpg" alt="rose" style="width:100%">
+    <img src="image8.jpg" alt="rose" style="width:100%">
     <div class="container">
     <p><strong><em>ROSE</em></strong></p>
     </div>
   </div>
 
   <div class="polaroid">
-    <img src="image\image3.jpg" alt="nature" style="width:100%">
+    <img src="image3.jpg" alt="nature" style="width:100%">
     <div class="container">
     <p><strong><em>BLOOM</em></strong></p>
     </div>
   </div>
 
   <div class="polaroid">
-    <img src="image\image2.jpg" alt="nature" style="width:100%">
+    <img src="image2.jpg" alt="nature" style="width:100%">
     <div class="container">
     <p><strong><em>STONE TOWER</em></strong></p>
     </div>
@@ -46,7 +46,7 @@
 
   
   <div class="polaroid">
-    <img src="image\image10.jpg" alt="nature" style="width:100%">
+    <img src="image10.jpg" alt="nature" style="width:100%">
     <div class="container">
     <p><strong><em>VALLEY</em></strong></p>
     </div>
